[tool.poetry]
name = "lasier"
version = "0.2.3"
description = "A sync/async circuit breaker implementation"
authors = ["LuizaLabs <pypi@luizalabs.com>"]
license = "MIT"
repository = "https://github.com/luizalabs/lasier"
keywords = ["circuit breaker", "sync", "async"]
readme = "README.md"
classifiers = [
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.942"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
aiocache = "^0.11.1"
fakeredis = "^1.7.4"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
skip-string-normalization = true
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
known_first_party = "lasier,tests"
atomic = true
